crates/macro_tests/tests/fail/simple/invalid-argument-count.stderr
error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> tests/fail/simple/invalid-argument-count.rs:4:10
   |
4  | #[derive(LuaProxy, Reflect, Clone)]
   |          ^^^^^^^^ an argument of type `usize` is missing
   |
note: method defined here
  --> tests/fail/simple/invalid-argument-count.rs:14:12
   |
14 |     pub fn my_fn(&self, _: usize) {}
   |            ^^^^^ -----  --------
   = note: this error originates in the derive macro `LuaProxy` (in Nightly builds, run with -Z macro-backtrace for more info)
